--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "editable"
   ],
   "author": "Tito Hinostroza",
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "GPL3",
   "bugs": {
     "url": "https://github.com/SeraphNet/bootstable/issues"
   },
